--- a/frontend/src/pages/RSVP/components/Banner/banner.scss
+++ b/frontend/src/pages/RSVP/components/Banner/banner.scss
@@ -27,5 +27,13 @@
         color: $gray;
       }
     }
+
+    @include sm {
+      justify-content: center;
+    }
+  }
+
+  @include sm {
+    aspect-ratio: 4 / 3;
   }
 }
