--- a/frontend/src/pages/RSVP/components/RsvpForm/rsvp-form.scss
+++ b/frontend/src/pages/RSVP/components/RsvpForm/rsvp-form.scss
@@ -1,6 +1,6 @@
 @import "../../../../style/variables";
 
-.create-event-form {
+.rsvp-form {
   & > div:first-child {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -33,6 +33,11 @@
           }
         }
       }
+
+      @include sm {
+        gap: 1rem;
+        flex-direction: column;
+      }
     }
     .note-container {
       grid-row: span 2;
@@ -40,6 +45,11 @@
       div {
         height: 100%;
       }
+    }
+
+    @include sm {
+      grid-template-columns: 1fr;
+      gap: 1rem;
     }
   }
 
@@ -50,6 +60,10 @@
       font-size: 2.5rem;
       font-family: "Montserrat", sans-serif;
       font-weight: 600;
+
+      @include sm {
+        font-size: 1.5rem;
+      }
     }
 
     .radio-buttons-container {
@@ -57,6 +71,11 @@
       display: flex;
       gap: 24px;
       width: 100%;
+
+      @include sm {
+        gap: 1rem;
+        flex-wrap: wrap;
+      }
     }
   }
 
@@ -64,5 +83,9 @@
     margin-top: 48px;
     margin-inline: auto;
     width: 40%;
+
+    @include sm {
+      width: 100%;
+    }
   }
 }
