--- a/frontend/src/pages/RSVP/rsvp.scss
+++ b/frontend/src/pages/RSVP/rsvp.scss
@@ -9,6 +9,10 @@
   .previous-events-header {
     padding: 40px 64px 20px 64px;
 
+    @include sm {
+      padding: 16px 20px;
+    }
+
     h2 {
       font-size: 2.5rem;
       font-weight: 600;
@@ -27,6 +31,18 @@
     }
   }
 
+  .no-event {
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span {
+      font-family: "Montserrat", sans-serif;
+      font-size: 2.5rem;
+      font-weight: 500;
+    }
+  }
   .rsvp-form-section {
     padding: 40px 64px;
 
@@ -49,6 +65,10 @@
 
     .rsvp-form-container {
       margin-top: 60px;
+    }
+
+    @include sm {
+      padding: 16px 20px;
     }
   }
 }
