--- a/frontend/src/ui/Navbar/navbar.scss
+++ b/frontend/src/ui/Navbar/navbar.scss
@@ -36,53 +36,50 @@
   }
 }
 
-.desktop{
+.desktop {
   // border: 1px solid orange;
   display: flex;
-  width: fit-content ;
+  width: fit-content;
   align-items: center;
   gap: 150px;
   transition: all 2s ease;
-  
 }
-.menu{
-  position: absolute;
-  right: 10px;
+.menu {
   width: 30px;
   height: 30px;
+  overflow: hidden;
   display: none;
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  transition-delay: .5s;
+  transition-delay: 0.5s;
   z-index: 10;
-  .lines{
-    transition: all .3s linear;
+  .lines {
+    transition: all 0.3s linear;
     width: 100%;
     height: 3px;
     background-color: $green;
     border-radius: 10px;
-    &:nth-child(2){
-      width:80%;
+    &:nth-child(2) {
+      width: 80%;
       align-self: flex-start;
     }
   }
- 
 }
-.active{
-  .lines{
-    transition: all .4s linear;
+.active {
+  .lines {
+    transition: all 0.4s linear;
     background-color: $green;
     perspective: 2;
-    &:nth-child(1){
-      top:15px;
+    &:nth-child(1) {
+      top: 15px;
       transform: rotate(45deg);
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       display: none;
     }
 
-    &:nth-child(3){
+    &:nth-child(3) {
       top: 15px;
       position: absolute;
 
@@ -91,9 +88,8 @@
   }
 }
 
-@media (max-width:426px) {
-
-  .desktop{
+@media (max-width: 426px) {
+  .desktop {
     display: none;
     flex-direction: column;
     position: absolute;
@@ -104,26 +100,22 @@
     background-color: $gray;
     width: 200px;
     padding-bottom: 30px;
-    border-radius:0px 0 0 10px;
-
-
+    border-radius: 0px 0 0 10px;
   }
-.navbar{
+  .navbar {
     flex-direction: column;
-   
+    height: 100vh;
+    padding-top: 6rem;
+
     right: 0;
     top: 0;
     border-radius: 0;
-    .link{
-      font-size: .7rem;
+    .link {
+      font-size: 0.7rem;
     }
-   
   }
-  .menu{
+  .menu {
     display: flex;
     z-index: 10;
   }
- 
 }
-
-
