--- a/frontend/src/pages/Home/components/ComponentCard/cardstyle.scss
+++ b/frontend/src/pages/Home/components/ComponentCard/cardstyle.scss
@@ -1,13 +1,13 @@
-.mainContainer{
-    width: 90%;
-    margin: 0 auto 30px;
-    display: flex;
-    justify-content: space-between;
+.mainContainer {
+  width: 90%;
+  margin: 0 auto 30px;
+  display: flex;
+  justify-content: space-around;
 }
-@media (max-width:426px) {
-    .mainContainer{
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-    }
+@media (max-width: 426px) {
+  .mainContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
 }
