--- a/frontend/src/pages/Tracker/tracker.scss
+++ b/frontend/src/pages/Tracker/tracker.scss
@@ -1,4 +1,4 @@
-@import "../../style/variables.scss";
+@import '../../style/variables.scss';
 
 .tracker-events-header {
   padding: 40px 64px 20px 64px;
@@ -9,7 +9,7 @@
   h2 {
     font-size: 2.5rem;
     font-weight: 600;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
 
     @include sm {
       font-size: 1.5rem;
@@ -25,9 +25,9 @@
 }
 
 .loader-container {
-  position: fixed;
+  // position: fixed;
   width: 100%;
-  height: 100%;
+  height: 60dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,7 +35,7 @@
 
 .not-selected {
   display: block;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-size: 2.5rem;
   text-align: center;
   padding: 64px;
@@ -46,7 +46,7 @@
 }
 .no-guests {
   margin: 60px auto;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
   text-align: center;
@@ -62,7 +62,7 @@
     gap: 20px;
     font-size: 20px;
     font-weight: 600;
-    font-family: "Montserrat";
+    font-family: 'Montserrat';
     p {
       font-size: 15px;
       font-weight: 500;
@@ -78,7 +78,7 @@
       align-items: center;
       gap: 20px;
       font-size: 20px;
-      font-family: "Montserrat";
+      font-family: 'Montserrat';
       font-weight: 500;
 
       .prob {
@@ -105,7 +105,7 @@
             right: 0;
             margin: 0 auto;
             z-index: 3;
-            content: " ";
+            content: ' ';
             width: 13px;
             height: 13px;
             border-radius: 20px;
@@ -120,7 +120,7 @@
 .guestDetails {
   width: 90%;
   margin: 0 auto;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   & > .contact {
     display: flex;
     gap: 10px;
