Finished the responsiveness in the tracker page

--- a/frontend/src/pages/Home/components/ComponentCard/cardstyle.scss
+++ b/frontend/src/pages/Home/components/ComponentCard/cardstyle.scss
@@ -1,5 +1,6 @@
 .mainContainer{
-    width: 90%;
+    width: clamp;
+
     margin: 0 auto 30px;
     display: flex;
     justify-content: space-between;
