--- a/frontend/src/pages/Tracker/tracker.scss
+++ b/frontend/src/pages/Tracker/tracker.scss
@@ -52,6 +52,11 @@
   text-align: center;
   color: $green;
 }
+
+.css-eqpfi5-MuiAccordionSummary-content{
+  width: 100%;
+  margin: 0 auto;
+}
 .guestAttendance {
   width: 100%;
   margin: 0 auto !important;
@@ -91,7 +96,7 @@
           width: 20px;
           height: 20px;
           border: 2px solid grey;
-          border-radius: 20px;
+          border-radius: 50%;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -132,11 +137,10 @@
 
   > .more {
     background-color: $fountainWhite;
-    padding: 10px;
+    padding: 12px;
     border-radius: 10px;
   }
 }
-
 .css-1086bdv-MuiPaper-root-MuiAccordion-root {
   box-shadow: none !important;
   border-bottom: 1px solid rgba(176, 176, 176, 0.788);
@@ -148,4 +152,56 @@
 }
 .css-1086bdv-MuiPaper-root-MuiAccordion-root.Mui-expanded {
   margin: 16px auto !important;
+}
+
+
+@media (max-width:426px){
+  
+ .guestAttendance{
+  .namePict{
+    font-size: 14px;
+    p{
+      font-size: 12px;
+    }
+
+  }
+
+  .attendance{
+    .status{
+      margin: 10px auto;
+      display: block;
+      font-size: 10px;
+      justify-content: space-between;
+
+      .prob{
+        margin-top: 10px;
+        gap: 5px;
+font-size: 10px;
+        >.circle{
+          width: 12px;
+          height: 12px;
+          border: 1px solid grey;
+        }
+        .active{
+          border: 1px solid $green !important;
+          &::after{
+            width: 8px;
+            height: 8px;
+          }
+        }
+      }
+    }
+  }
+ }
+.guestDetails{
+  &>.contact{
+    font-size: 12px;
+    margin: 5px 0;
+  }
+  >.more{
+    font-size: 12px;
+    
+  }
+}
+
 }
