--- a/frontend/src/pages/Home/components/Footer/footer.scss
+++ b/frontend/src/pages/Home/components/Footer/footer.scss
@@ -1,6 +1,7 @@
 @import "../../../../style/variables.scss";
 
 footer{
+    margin-top: 100px;
     width: 100%;
     height: 400px;
     background-color: $dark;
