--- a/frontend/src/pages/Home/home.scss
+++ b/frontend/src/pages/Home/home.scss
@@ -195,9 +195,10 @@
 
   .brandsTrusts {
     width: 80%;
-    margin: 50px auto;
+    margin: 50px auto 100px;
     & > p {
       font-size: 40px;
+      margin-bottom: 20px;
     }
     & > img {
       margin-top: 30px;
